the data format section now auto-heights based on viewport size so that it scrollbars correctly

--- a/genpayload.less
+++ b/genpayload.less
@@ -90,6 +90,10 @@ a {
     border-radius: 3px;
     border-style: solid;
 }
+#dataformat {
+    overflow: auto;
+    max-height: 400px;
+}
 
 /**********************************************************
  * Colours
